[project]
name = "manim-skia"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel Ángel Rodríguez Vidal",email = "unmoldequimica@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "manim_skia", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
