[project]
name = "manim-skia"
version = "0.0.1"
description = ""
authors = [
    {name = "Miguel Ángel Rodríguez Vidal",email = "unmoldequimica@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "manim>=0.19"
]

[tool.poetry]
packages = [{include = "manim_skia", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipdb (>=0.13.13,<0.14.0)"
]
